@@ -96,6 +96,8 @@ tasks {
         jvmArgs(
             "--add-opens", "java.base/jdk.internal.misc=ALL-UNNAMED",
             "--add-exports", "java.base/jdk.internal.util=ALL-UNNAMED",
+            "--add-exports", "java.base/sun.security.action=ALL-UNNAMED",
+            "-Xmx4g",
             "-Dlincheck.debug.test=true",
         )
     }
